# RDP-Extended-Launcher

./: .gitignore  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  main.yml
app/: index.html  package.json  tailwind.config.js
app/src/: App.tsx  TitleBar.tsx  api.ts  index.css  profileStore.ts  types.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: commands.rs  main.rs  models.rs  monitor.rs  rdp.rs
docs/: BUILDING.md  CONFIGURATION.md
scripts/: build-with-vs.bat  build.bat  setup.ps1  verify.ps1
